--- a/certin/package.json
+++ b/certin/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.488.0",
+    "motion": "^12.8.2",
     "next": "15.3.0",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
